2007-03-22 svu

	* configure.in: make build process a bit smarter (in relation to
	xkbcomp), preparing 3.2

2007-03-19 svu

	* libxklavier/xklavier_toplevel.c: fixing the default group processing.
	Closing http://bugzilla.gnome.org/show_bug.cgi?id=414269

2007-02-23 svu

	* libxklavier/xklavier.c: workaround for xlib ambiguous behavior.
	http://bugzilla.gnome.org/show_bug.cgi?id=392853

2007-02-11 svu

	* configure.in: process empty x_libraries correctly, fixing
	http://bugzilla.gnome.org/show_bug.cgi?id=343762

2006-11-03 svu

	* libxklavier/xklavier_config.c: more accurate dealing with empty
	nodeset, hopefully fixing
	http://bugzilla.gnome.org/show_bug.cgi?id=370038

2006-10-16 svu

	* configure.in, NEWS: preparing release 3.1

2006-10-15 svu

	* libxklavier/xklavier.c, libxklavier/xklavier_evt.c,
	libxklavier/xklavier_evt_xkb.c, libxklavier/xklavier_evt_xmm.c,
	libxklavier/xklavier_private.h: more correct processing of the root
	window property defining the configuration. Apps listening for
	XKLL_TRACK_KEYBOARD_STATE should be notified as well.
	* libxklavier/xklavier_props.c: fixing splitting variant out of
	layout, like in "ru(winkeys)"

2006-10-07 svu

	* *.h,*.c: added copyright statements, as requested by debian folks

2006-08-30 svu

	* configure.in, NEWS: preparing release 3.0

2006-08-03 svu

	* libxklavier/xklavier_config.c: Loading with custom SAX handler
	(inherited from the existing default DOM builder). Now, loaded XML
	takes only 500K (for us locale). Hurray! 

2006-08-02 svu

	* libxklavier/xklavier_config.c: improving the XML parsing options,
	saving at least 1M of heap.

2006-07-30 svu

	* libxklavier/xkl_config_registry.h, libxklavier/xklavier_config.c,
	libxklavier/xklavier_config_i18n.c, libxklavier/xklavier_private.h,
	tests/test_config.c: simplifying description charset conversion,
	adding custom charset (as Andriy requested)

2006-07-30 svu

	* configure.in, libxklavier/Makefile.am: fixing autoconf stuff for
	modular X

2006-07-30 svu
